[change][constants][controllers][routes][utils] 1. add filename in request header when uploading file 2. duplicate title function exclude own id
